# skyjo

./: .gitignore  README.md  RULES.md  SKYNET_ARCHITECTURE_REVIEW.md  abstract.py  benchstats.py  buffer.py  config.py  distributed_main.py  explain.py  faceoff.py  factory.py  main.py  mcts.py  mcts_new.py  model_factory.py  parallel_mcts.py  play.py  player.py  predictor.py  pyproject.toml  run_train_epoch.py  selfplay.py  skyjo.py  skyjo_dqn.py  skyjo_immutable.py  skyjo_players.py  skynet.py  stats.py  test_play.py  test_selfplay.py  test_skyjo.py  test_skyjo_immutable.py  test_skyjo_torch.py  test_skynet.py  train.py  train_new.py  train_utils.py
demo/: README.md  main.py  pyproject.toml
models/special/20250813/: model_20250813_185028.pth
notebooks/: test_torch_device.ipynb
sim/: Makefile  magic.hpp  main.cpp  skyjo.cpp  skyjo.hpp  test.cpp
skyjo/: Makefile  abstract.py  logging_config.py  main.py  mcts.py  pyproject.toml  skyjo.py  skyjo_immutable.py  skynet.py  train.py
skyjo/include/: cards.h  game.h  hand.h  test.h
skyjo/skyjo/: __init__.py
skyjo/src/: cards.c  game.c  hand.c  skyjo.c
skyjo/test/: test_skyjo.c  test_skyjo.py
src/skyjo/: __init__.py  buffer.py  explain.py  faceoff.py  factory.py  main.py  mcts.py  parallel_mcts.py  play.py  player.py  predictor.py  skynet.py  stats.py  train.py  train_utils.py
src/skyjo2/: __init__.py  __main__.py  _game.py  _play.py  _print.py  _render.py  game.py  play.py  render.py
src/skynet/: __init__.py  embed.py  play.py
tests/: conftest.py  test_buffer.py  test_play.py  test_score_differential_value.py  test_skyjo.py  test_skyjo2.py  test_skyjo2_play.py  test_skyjo2_print.py  test_skyjo2_render.py  test_skyjo_immutable.py  test_skynet.py  test_train.py
