[project]
name = "skyjo"
version = "0.1.0"
description = "AI model, training, and gameplay for Skyjo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "numpy>=2.1.3",
    "textual>=4.0.0",
    "torch>=2.5.1",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "py-spy>=0.4.0",
    "pytest>=8.3.5",
    "ray[tune]>=2.46.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
