[project]
name = "skyjo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["skyjo"]

[[tool.setuptools.ext-modules]]
name = "skyjo.ext"
sources = ["src/cards.c", "src/hand.c", "src/skyjo.c"]
include-dirs = ["include"]
depends = ["include/cards.h", "include/hand.h"]
extra-compile-args = ["-Wall"]
